BUGFIX<NAV>: extra padding removed from Nav in bigger resolution screens

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -896,7 +896,7 @@ blockquote {
     font-size: 22px;
   }
   header .menu ul {
-    padding: 85px 0;
+    //padding: 85px 0;
   }
   header .logo h3 a {
     font-size: 55px;
